k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            # note that instead of "component", we can use something else:
            myservercomponent: expressserver
    template:
        metadata:
            labels:
                myservercomponent: expressserver
        spec:
            containers:
                - name: server
                  image: vagandon/multi_app_fib_server
                  ports:
                    - containerPort: 5000
