k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector: 
        # the selector needs to fit the label in client-deployment.yaml:
        component: web
    ports:
        # - port is the port other pods / services in the cluster can use
        #   to access the client (can be different from targetPort)
        # - targetPort: the actual container-port of our client service
        - port: 3000
          targetPort: 3000
