k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-cluster-ip-service
spec:
    type: ClusterIP
    selector: 
        # the selector needs to fit the label in redis-deployment.yaml:
        component: redis
    ports:
        # Notes:
        # - targetPort: the actual container-port of our redis service
        - port: 6379
          targetPort: 6379
