k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        # Tell kubernetes, that our ingress controller is to be based
        # on the nginx project
        kubernetes.io/ingress.class: nginx
        # The following tells nginx, that if routes something /whatever
        # to a new target, this /whatever is replaced by "/"
        # => in our case: /api is replaced by "/"
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /api/?(.*)
                  backend: 
                    serviceName: server-cluster-ip-service
                    servicePort: 5000
